--- a/test.html
+++ b/test.html
@@ -22,8 +22,8 @@
                 <span href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times; </span>
                 <span id="home" onclick="home()">Home</span>
                 <span id="chat" onclick="chat()">Chat</span>
-                <span id="video" onclick="video()" class="active">Video</span>
-                <span id="test" onclick="test()">Test</span>
+                <span id="video" onclick="video()">Video</span>
+                <span id="test" onclick="test()" class="active">Test</span>
                 <span id="news" onclick="news()">News</span>
                 <span id="cheat" onclick="panel()">Profile</span>
                 <span id="about" onclick="about()">About</span>
