--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="mainchatlok.css">
+    <link rel="icon" type="image/x-icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
+    <title>UFO-LOK</title>
 </head>
 <body>
-    <div id="logIn-page-container">
-        <div id="username-container">
-         <center> <h2> Site service has been closed due to lack of active user. <br>
-             Also LOK exists no more. So, there is no meaning of LOK site. </h2> </center>
-            <br>
-            <h3> Page not found </h3>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<div class="header">
+    <div id="header-content" class="logo"><center>Acess Notes from Day 1</center></div>
+</div>
+  
+    <div id="day-left-counter"> </div>
+    <div id="main-container">
+        <div id="notes-container">
+            <a href="day1.html"><button>Crack SEE conference Day 1</button></a>
+            
         </div>
     </div>
-    
 </body>
 </html>
