--- a/day1.html
+++ b/day1.html
@@ -1,4 +1,8 @@
-<h3>key words:</h3>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h3>key words:</h3>
 1. printf :- to print anything   printf("statement"); <br>
 2. scanf :- to take input   scanf("%datatype", &variable);<br>
 
@@ -7,7 +11,7 @@
                   code<br>
                 }<br>
 i++ means increse by one<br>
-i-- means decrease by one<br>
+i-- means decrease by one<br><br>
 
 2. While loop:- while(condition){<br>
                     code<br>
@@ -25,4 +29,4 @@ float: decimal %f <br>
 string: word %s <br>
 character: alphabet %ch <br>
 double : --- <br>
-
+</body>
