--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div id="main-container">
         <div id="notes-container">
             <a href="day1.html"><button>Crack SEE conference Day 1</button></a>
+            <a href="day2.html"><button>Crack SEE conference Day 2</button></a>
+            
             
         </div>
     </div>
