--- a/day1.html
+++ b/day1.html
@@ -2,6 +2,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="notes-container>
   <h3>key words:</h3>
 1. printf :- to print anything   printf("statement"); <br>
 2. scanf :- to take input   scanf("%datatype", &variable);<br>
@@ -29,4 +30,5 @@ float: decimal %f <br>
 string: word %s <br>
 character: alphabet %ch <br>
 double : --- <br>
+                                             </div>
 </body>
