--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="notes-container">
             <a href="day1.html"><button>Crack SEE conference Day 1</button></a>
             <a href="day2.html"><button>Crack SEE conference Day 2</button></a>
+            <a href="day3.html"><button>NPABSON Qno 9.b</button></a>
             
             
         </div>
